added To Do notes for next session

--- a/index.html
+++ b/index.html
@@ -54,3 +54,14 @@
             </footer>
         </body>
 </html>
+
+<!-- TODO:
+1. Create images for books and logos
+2. Write blurb and call for contributors
+3. Create stylesheet
+4. Style nav bar
+5. Style page
+6. Add video embed
+7. Flexbox Other Books and Oolon collection sections
+8. Add address to footer
+-->
