added images file and hero image

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <main>
                 <div class="hero">
                     <!--Hitchhiker's Guide image with "The Universe's no. 1 Best Seller"-->
+                    <img src="hero.svg" alt="a pink background with Hitchhiker's Guide to the Galaxy in big yellow letters with a white arrow pointing to a yellow cover of the book">
                 </div>
                 <article class="hitchhikers-blurb">
                     <p><!--blurb for guide--></p>
@@ -34,6 +35,8 @@
                 <div class="other-books">
                     <h2>Other Books</h2>
                     <!--flexbox images of The Celestial Homecare Omnibus and 53 More Things To Do in Zero Gravity-->
+                    <img src="./book-images/the-celestial-homecare-omnibus-cover.svg" alt="a woman sits in a cross-legged position on a book cover with the title The Celestial Homecare Omnibus.">
+                    <img src="./book-images/53-more-things-cover.svg" alt="a minimalist planet with rings on a cream colored book cover with the title 53 More Things to Do in Zero Gravity.">
                 </div>
                 <div class="oolon-collection">
                     <h2>The Oolon Colluphid God Trilogy</h2>
