--- a/index.html
+++ b/index.html
@@ -1,61 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="styles.css">
-        <title>Megadodo Publications</title>
-    </head>
-    <body>
-        <header id="header">
-            <!-- logo here -->
-            <h1>Megadodo Publications</h1>
-            <nav id="nav-bar">
-                <ul>
-                    <li class="nav-link">The Guide</li>
-                    <li class="nav-link">Other Books</li>
-                    <li class="nav-link">The Oolon Colluphid Collection</li>
-                    <li class="nav-link">Write for the Guide</li>
-                    <!-- logos for search and cart here -->
-                </ul>
-            </nav>
-        </header>
-            <main>
-                <div class="hero">
-                    <!--Hitchhiker's Guide image with "The Universe's no. 1 Best Seller"-->
-                    <img src="hero.svg" alt="a pink background with Hitchhiker's Guide to the Galaxy in big yellow letters with a white arrow pointing to a yellow cover of the book">
-                </div>
-                <article class="hitchhikers-blurb">
-                    <p><!--blurb for guide--></p>
-                </article>
-                <div class="hitchhikers-video">
-                    <h2>Watch for more information on the Guide</h2>
-                    <!--https://www.youtube.com/watch?v=J17VQaq4utQ-->
-                </div>
-                <div class="other-books">
-                    <h2>Other Books</h2>
-                    <!--flexbox images of The Celestial Homecare Omnibus and 53 More Things To Do in Zero Gravity-->
-                    <img src="./book-images/the-celestial-homecare-omnibus-cover.svg" alt="a woman sits in a cross-legged position on a book cover with the title The Celestial Homecare Omnibus.">
-                    <img src="./book-images/53-more-things-cover.svg" alt="a minimalist planet with rings on a cream colored book cover with the title 53 More Things to Do in Zero Gravity.">
-                </div>
-                <div class="oolon-collection">
-                    <h2>The Oolon Colluphid God Trilogy</h2>
-                    <!--flexbox images of Where God Went Wrong, Some More of God's Greatest Mistakes, and Who is this God Person Anyway?-->
-                </div>
-                <form id="form" class="call-for-contributors">
-                    <h2>Write for the Guide!</h2>
-                    <p><!--call for contributors--></p>
-                    <label for="contributor-email">Email us suggested updates here:</label>
-                    <input type="email" name="contributor-email" id="email" placeholder="ford-prefect@megadodopublications.org">
-                    <input type="submit" name="submit" id="submit">
-                </form>
-            </main>
-            <footer>
-                <address>
-                    <!--Megadodo Publications address here-->
-                </address>
-            </footer>
-        </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
+    <title>Megadodo Publications</title>
+  </head>
+  <body>
+    <header id="header">
+      <!-- logo here -->
+      <h1>Megadodo Publications</h1>
+      <nav id="nav-bar">
+        <ul>
+          <li class="nav-link">The Guide</li>
+          <li class="nav-link">Other Books</li>
+          <li class="nav-link">The Oolon Colluphid Collection</li>
+          <li class="nav-link">Write for the Guide</li>
+            <!-- logos for search and cart here -->
+            <li><img src="./icons/search.svg" alt="a small magnifying glass search icon"></li>
+            <li><img src="./icons/cart.svg" alt="a small cart icon"></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="hero">
+        <!--Hitchhiker's Guide image with "The Universe's no. 1 Best Seller"-->
+        <img
+          src="hero.svg"
+          alt="a pink background with Hitchhiker's Guide to the Galaxy in big yellow letters with a white arrow pointing to a yellow cover of the book"
+        />
+      </div>
+      <article class="hitchhikers-blurb">
+        <p><!--blurb for guide--></p>
+      </article>
+      <div class="hitchhikers-video">
+        <h2>Watch for more information on the Guide</h2>
+        <iframe
+          src="https://www.youtube.com/embed/Z1Ba4BbH0oY?si=wodweUrkRPAcslnn&amp;start=103"
+          id="video"
+          title="YouTube video player"
+        ></iframe>
+      </div>
+      <div class="other-books">
+        <h2>Other Books</h2>
+        <!--flexbox images of The Celestial Homecare Omnibus and 53 More Things To Do in Zero Gravity-->
+        <img
+          src="./book-images/the-celestial-homecare-omnibus-cover.svg"
+          alt="a woman sits in a cross-legged position on a book cover with the title The Celestial Homecare Omnibus."
+        />
+        <img
+          src="./book-images/53-more-things-cover.svg"
+          alt="a minimalist planet with rings on a cream colored book cover with the title 53 More Things to Do in Zero Gravity."
+        />
+      </div>
+      <div class="oolon-collection">
+        <h2>The Oolon Colluphid God Trilogy</h2>
+        <!--flexbox images of Where God Went Wrong, Some More of God's Greatest Mistakes, and Who is this God Person Anyway?-->
+        <img src="./book-images/where-god-went-wrong-cover.svg" alt="" />
+        <img src="./book-images/some-more-mistakes-cover.svg" alt="" />
+        <img src="./book-images/who-is-this-god-person-cover.svg" alt="" />
+      </div>
+      <form id="form" class="call-for-contributors">
+        <h2>Write for the Guide!</h2>
+        <p><!--call for contributors--></p>
+        <label for="contributor-email">Email us suggested updates here:</label>
+        <input
+          type="email"
+          name="contributor-email"
+          id="email"
+          placeholder="ford-prefect@megadodopublications.org"
+          required
+        />
+        <input
+          type="text"
+          name="suggested-contribution"
+          id="suggested-contribution"
+          placeholder="On Ceti VII..."
+          required
+        />
+        <input type="submit" name="submit" id="submit" />
+      </form>
+    </main>
+    <footer>
+      <address>
+        <!--Megadodo Publications address here-->
+      </address>
+    </footer>
+  </body>
 </html>
 
 <!-- TODO:
